# ananta

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
.kiro/hooks/: align.kiro.hook  clarify.kiro.hook  vibe.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
arxiv-explorer/: Dockerfile  README.md  arxiv-explorer.sh  docker-compose.yml  launch.py
code-explorer/: Dockerfile  README.md  code-explorer.sh  docker-compose.yml  launch.py
docs/: DEVELOPMENT.md  ENVIRONMENT.md  OVERVIEW.md  RELEASE-WORKFLOW.md  extending-web-tools.md
docs/plans/: 2026-02-13-code-explorer-design.md  2026-02-13-code-explorer-implementation.md  2026-02-14-oolong-structured-output-design.md  2026-02-14-oolong-structured-output-implementation.md  2026-02-17-shared-code-consolidation-design.md  2026-02-17-shared-code-consolidation-implementation.md  2026-02-18-boundary-marker-rendering-design.md  2026-02-18-boundary-marker-rendering-plan.md  2026-02-18-repo-topic-assignment-design.md  2026-02-18-repo-topic-assignment.md  2026-03-05-document-explorer-design.md  2026-03-05-document-explorer-implementation.md  2026-03-05-ux-fixes-design.md  2026-03-05-ux-fixes-implementation.md  2026-03-06-refactor-explorers-design.md  2026-03-06-refactor-explorers-implementation.md  2026-03-06-shared-help-panel-design.md  2026-03-06-shared-help-panel-implementation.md  2026-03-06-shared-launcher-validation-design.md  2026-03-06-shared-launcher-validation-implementation.md  2026-03-18-background-knowledge-design.md  2026-03-18-background-knowledge-implementation.md  2026-03-18-documents-only-notice-design.md  2026-03-18-trace-download-design.md  2026-03-18-trace-download-implementation.md  2026-03-20-changelog-versioning-design.md  2026-03-20-changelog-versioning-plan.md  2026-03-20-migration-script-design.md  2026-03-20-partial-callable-design.md  2026-03-20-partial-callable-implementation.md  2026-03-20-partial-evidence-retry-design.md  2026-03-20-partial-evidence-retry-implementation.md  2026-03-20-rename-ananta-design.md  2026-03-20-rename-ananta-implementation.md  2026-03-21-docker-socket-discovery-design.md  2026-03-21-docker-socket-discovery-implementation.md  2026-03-22-experimental-to-explorers-design.md  2026-03-22-experimental-to-explorers-plan.md  2026-03-22-python-launcher-design.md  2026-03-22-python-launcher-implementation.md  (+3 more)
document-explorer/: Dockerfile  docker-compose.yml  document-explorer.sh  launch.py
examples/: __init__.py  arxiv-explorer.sh  barsoom.py  basic_usage.py  fastapi_service.py  multi_repo.py  repo.py  script_utils.py
oolong/: alt-glitch-rlm-oolong.py  run_oolong_and_pairs.py  run_reference_implementation.py
prompts/: README.md  context_metadata.md  system.md  system_augmented.md
scripts/: common.sh
(+540 files in other folders)
